Revision history for CPAN module Expect

1.34 2017-05-??
    - Added a MANIFEST so that "make dist" will work

1.33 2016-06-08
    Remove dependency on Test::Exception

1.32 2014-10-26
    Skip bc tests. https://rt.cpan.org/Ticket/Display.html?id=98495

1.31 2014-09-02
    Eliminate the requirement for ExtUtils::MakeMaker 1.70.
       Now any ExtUtils::MakeMaker should work on the client side.

    In the tests, add special treatment for $^O=midnightbsd and dragonfly.
       and for $^O=linux as well.
	Test t/11-calc.t also got some special treatment.

1.30 2014-08-22
    RT #47834
    After a failed call to ->expect the ->match, and ->after will return undef
    and ->before will return the content of the accumulator.
    Earlier they retained the values obtained during the last successful match.

    ->before will return undef at the first time but later, if we call ->clear_accum,
    it will start returning the empty string.

    CONFIGURE_REQUIRES ExtUtils::MakeMaker 6.70
    Some test updates.

1.29 2014-08-14
    Official co-maintainer SZABGAB (Gabor Szabo)
    Update documentation according to RT #60722

1.28 2014-08-14
    Croak if undef passed to _trim_length
    Fix double planning on skipped test

1.27 2014-08-13
    Remove $& and $` fixing the rest of RT #61395
    Add more test cases.
    Various code refactoring declaring loop variables;
      parameter passing; return undef; etc.

1.26 2014-08-12
    Skip the bc test on OS-es where it has been failing.
    Stop inheriting from Exporter.
    Eliminate $` and $' from the code. part of (RT #61395)
      This fix might break some existing code n some extreme cases
      when the regex being matched has a lookbehind or a lookahead
      at the edges.

1.25 2014-08-05
    Fix test count.

1.24 2014-08-04
    More test diagnostics.
    Tests added for RT #62359

1.23 2014-07-29
    Refactoring test script.
    Eliminate indirect calls in the code and in the docs.
    Use Perl::Tidy to unify layout. 